--- a/example/package.json
+++ b/example/package.json
@@ -3,25 +3,29 @@
     "version": "1.0.0",
     "scripts": {
         "build": "rollup -c",
-        "dev": "rollup -c -w",
+        "dev": "cd .. && npm run build && cd example && rollup -c -w",
         "start": "sirv public",
         "validate": "svelte-check"
     },
     "devDependencies": {
-        "@rollup/plugin-commonjs": "^14.0.0",
-        "@rollup/plugin-node-resolve": "^8.0.0",
-        "@rollup/plugin-typescript": "^6.0.0",
+        "@rollup/plugin-commonjs": "^17.0.0",
+        "@rollup/plugin-node-resolve": "^11.0.0",
+        "@rollup/plugin-typescript": "^8.0.0",
         "@tsconfig/svelte": "^1.0.0",
+        "postcss": "^8.2.7",
         "rollup": "^2.3.4",
         "rollup-plugin-livereload": "^2.0.0",
-        "rollup-plugin-svelte": "^6.0.0",
+        "rollup-plugin-postcss": "^4.0.0",
+        "rollup-plugin-svelte": "^7.0.0",
         "rollup-plugin-terser": "^7.0.0",
-        "svelte": "^3.0.0",
-        "svelte-check": "^1.0.0",
-        "svelte-preprocess": "^4.0.0",
-        "@maritime-fun-group/svelte-core": "file:../../",
+        "sass": "^1.32.8",
+        "svelte": "^3.24.0",
+        "svelte-check": "^1.0.60",
+        "svelte-preprocess": "^4.5.1",
         "tslib": "^2.0.0",
-        "typescript": "^4.0.0"
+        "typescript": "^4.0.0",
+        "yup": "^0.32.9",
+        "@maritime-fun-group/svelte-core": "file:.."
     },
     "dependencies": {
         "sirv-cli": "^1.0.0"
